# qualcomm-board-validation

./: README.md
EMB-123-embedded-simulation-framework/: Building-Running.txt  CMakeLists.txt  tree
EMB-123-embedded-simulation-framework/config/: board_config.h  sim_params.json
EMB-123-embedded-simulation-framework/include/: logger.h  platform.h
EMB-123-embedded-simulation-framework/scripts/: run_tests.sh
EMB-123-embedded-simulation-framework/src/: main.c
EMB-123-embedded-simulation-framework/src/boot/: boot_sequence.c
EMB-123-embedded-simulation-framework/src/drivers/can/: can_bus.c
qualcomm-board-validation/: tree
qualcomm-board-validation/drivers/can/: can_driver.c
qualcomm-board-validation/drivers/ina231/: ina231_driver.cpp  power_manager.cpp
qualcomm-board-validation/drivers/led/: led_driver.cpp
qualcomm-board-validation/drivers/pmic/: config_pmic.c  pmic_adc_manager.c
qualcomm-board-validation/drivers/sdcard/: sdcard_driver.cpp
qualcomm-board-validation/drivers/usb/: usb_driver.c
qualcomm-board-validation/scripts/: collect_logs.py  flash_build.sh  run_tests.sh
qualcomm-board-validation/simulation/: hardware_simulator.cpp  live_monitor.py  virtual_dashboard.py
